MeshSizeFromBoundary command; combining views now copies options; added API
support for mesh compounds, per-surface mesh algorithm and mesh size from
boundary; renamed plugin AnalyseCurvedMesh to AnalyseMeshQuality; fixed
regression for built-in kernel BSplines on non-flat geometries (Sphere,
PolarSphere); small fixes.

* Incompatible API changes: removed mesh/smooth (now handled by mesh/optimize
  like all other mesh optimizers); new arguments to mesh/optimize,
  mesh/getElementProperties and occ/healShapes; added optional argument to
  mesh/classifySurfaces and view/combine.

4.4.1 (July 25, 2019): small improvements (transfinite with degenerate curves,
renumbering for some mesh formats, empty MSH file sections, tunable accuracy of
compound meshes) and bug fixes (ellipse < pi, orientation and reclassification
of compound parts, serendip pyramids, periodic MeshAdapt robustness, invalidate
cache after mesh/addNodes).

4.4.0 (July 1, 2019): new STL remeshing workflow (with new ClassifySurfaces
command in .geo files); added API support for color options, mesh optimization,
recombination, smoothing and shape healing; exposed additional METIS options;
improved support for periodic entities (multiple curves with the same start/end
points, legacy MSH2 format, periodic surfaces with embedded entities); added
mesh renumbering also after interactive mesh modifications; improved support for
OpenCASCADE ellipse arcs; new interactive filter in visibility window; flatter
GUI; small bug fixes.

* Incompatible API changes: mesh/getJacobians and mesh/getBasisFunctions now
  take integration points explicitely; mesh/setNodes and mesh/setElements have
  been replaced by mesh/addNodes and mesh/addElements; added optional arguments
  to mesh/classifySurfaces and occ/addSurfaceLoop; changed arguments of
  occ/addEllipseArc to follow geo/addEllipseArc.

4.3.0 (April 19, 2019): improved meshing of surfaces with singular